GameLauncher: use ZGC Generational garbage collector